syntax = "proto3";
package spire.types;
option go_package = "github.com/spiffe/spire/proto/spire/types";

import "spire/types/spiffeid.proto";

// X.509 SPIFFE Verifiable Identity Document. It contains the raw X.509
// certificate data as well as a few denormalized fields for convenience.
message X509SVID {
    // Certificate and intermediates required to form a chain of trust back to
    // the X.509 authorities of the trust domain (ASN.1 DER encoded).
    repeated bytes cert_chain = 1;

    // SPIFFE ID of the SVID.
    spire.types.SPIFFEID id = 2;

    // Expiration timestamp (seconds since Unix epoch).
    int64 expires_at = 3;
}
